# serum2-preset-loader

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
docs/: DERIVATION.md  audit-log.md  decisions.md
examples/: render_preset.py
src/serum2_preset_loader/: __init__.py  _cli.py  converter.py  wrappers.py
tests/: test_converter.py  test_real_preset_fixture.py  test_real_state_fixture.py  test_wrappers.py
tests/fixtures/: test_preset.SerumPreset
