[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serum2-preset-loader"
version = "0.1.0"
description = "Convert .SerumPreset files into VST3 state blobs that DawDreamer can load into Serum 2."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "wiillownet" }]
keywords = ["serum", "serum2", "vst3", "preset", "audio"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
dependencies = [
    "cbor2>=5.4",
    "zstandard>=0.20",
]

[project.urls]
Homepage = "https://github.com/wiillownet/serum-2-preset-loader"
Repository = "https://github.com/wiillownet/serum-2-preset-loader"
Issues = "https://github.com/wiillownet/serum-2-preset-loader/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
serum2_preset_loader = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
